# Gamecube-Controller-Wireless-Adapter

./: .gitignore  .gitmodules  LICENSE  README.md
Code/: CMakeLists.txt  ControllerComm.c  Utils.c  gcn_rx.pio  gcn_tx.pio  main.c
Code/Adapter/: CMakeLists.txt  ControllerComm.c  ControllerComm.cpp  PowerManager.cpp  Utils.cpp  WirelessComm.c  WirelessComm.cpp  gcn_comm.pio  gcn_controller.pio  gcn_rx.pio  gcn_tx.pio  main.c  main.cpp
Code/Adapter/Headers/: ControllerComm.h  ControllerDefs.h  ModuleTemplate.h  PinDefs.h  PowerManager.h  Utils.h  WirelessComm.h
Code/Controller Interface Test/: CMakeLists.txt  gcn_comm.pio  main.c  rx.pio  tx.pio
Code/Headers/: ControllerComm.h
Code/Loopback Test/: CMakeLists.txt  main.cpp
Code/RF24/utility/rp2/: spi.cpp
Enclosures/Console Interface/: Controller Plug Clamp Bottom.stl  Controller Plug Clamp Top.stl
Layout/Console Interface/: Console Interface.csv  Console Interface.kicad_pcb  Console Interface.kicad_prl  Console Interface.kicad_pro  Console Interface.kicad_sch  Console Interface.xml  Controllers.kicad_sch  GameCube Controllers.kicad_sym  Power.kicad_sch  Processor.kicad_sch  Wireless.kicad_sch  fp-info-cache  fp-lib-table  sym-lib-table
Layout/Console Interface/GameCube Controllers.pretty/: Controller Plug Clamp.kicad_mod  Gamecube Controller Socket.kicad_mod
Layout/Controller Interface/: Controller Interface.csv  Controller Interface.kicad_pcb  Controller Interface.kicad_prl  Controller Interface.kicad_pro  Controller Interface.kicad_sch  Controller Interface.xml  GTS24.kicad_sym  controller_connectors.kicad_sch  fp-info-cache  fp-lib-table  power.kicad_sch  processor.kicad_sch  sym-lib-table  wireless.kicad_sch
Layout/Controller Interface LB/: Controller Interface LB.kicad_pcb  Controller Interface LB.kicad_prl  Controller Interface LB.kicad_pro  Controller Interface LB.kicad_sch  fp-info-cache
Layout/Controller Interface/GTS24.pretty/: GTS24-SMD.kicad_mod
Layout/Controller Interface/GameCube Controllers.pretty/: Gamecube Controller Socket.kicad_mod
